# bdk-test

./: Cargo.toml  docker-compose.yml  liquid.txt
src/: bdk_wallet.rs  lib.rs  main.rs
