[package]
name = "bdk-test"
version = "0.1.0"
authors = ["rishflab <rishflab@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "macros", "sync"] }
bdk = { git="https://github.com/bitcoindevkit/bdk", features = [ "esplora", "async-trait","async-interface"], default-features=false}
bitcoin = { version = "0.25", features = ["rand", "use-serde"] }
bitcoin-harness = { git = "https://github.com/coblox/bitcoin-harness-rs", rev = "195af0bee6406e8fe6da0d425773fb7d56f20bd7" }
url = "2.1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1"
hyper = "0.14"
reqwest = "0.11"
