[package]
name = "bdk-test"
version = "0.1.0"
authors = ["rishflab <rishflab@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "0.2", features = ["rt-threaded", "time", "macros", "sync"] }
bdk = { version = "0.4", features = ["electrum"]}
bitcoin = { version = "0.25", features = ["rand", "use-serde"] }
bitcoin-harness = { git = "https://github.com/coblox/bitcoin-harness-rs", rev = "864b55fcba2e770105f135781dd2e3002c503d12" }
url = "2.1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1"
hyper = "0.13"
reqwest = "0.10"
